Added new background image and webstorm project

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 
 title:            Crawford Blog
 locale:           en_US
-url:              
+url:              http://crawford.cc
 
 
 # Jekyll configuration
