--- a/_config.yml
+++ b/_config.yml
@@ -30,20 +30,20 @@ owner:
   avatar: https://s.gravatar.com/avatar/76708b9af92b41d3861956800fc75a54?s=100
   bio: "I have a passion for small companies and start-ups that can utilize my skills as a full stack web applications developer. During my fourteen years of experience, I have worked with a wide array of clients ranging from Kraft Foods to the Department of Defense. I am a certified CrossFit instructor, wilderness survival expert and bitcoin enthusiast."
   email: josh@crawford.cc
-  disqus-shortname: "Josh C"
-  twitter: #thejoshcrawford
-  facebook: #thejoshcrawford
+  disqus-shortname: joshcrawford
+  twitter: thejoshcrawford
+  facebook:
   google:
-    plus: #username
+    plus:
     analytics: 
     verify: 
     ad-client: 
     ad-slot: 
   bing-verify: 
-  github: #thejoshcrawford
-  stackoverflow: #http://stackoverflow.com/users/965935/josh-c
-  linkedin: #thejoshcrawford
-  instagram: #thejoshcrawford
+  github: thejoshcrawford
+  stackoverflow: 965935/josh-c
+  linkedin: thejoshcrawford
+  instagram:
   lastfm: 
   tumblr: 
   pinterest: 
