social config, added social links to header

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site wide configuration
 
-title:            Crawford Blog
+title:            crawford.cc
 locale:           en_US
 url:              http://crawford.cc
 
