--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,13 +1,19 @@
 # Site navigation links
 
-- title: About
-  url: /about/
+- title: Email
+  url: mailto:josh@crawford.cc
 
-- title: Sample Posts
-  url: /posts/
+- title: LinkedIn
+  url: http://linkedin.com/in/thejoshcrawford
 
-- title: Theme Setup
-  url: /theme-setup/
+- title: Github
+  url: http://github.com/thejoshcrawford
 
-- title: Made Mistakes
-  url: http://mademistakes.com
+- title: StackOverflow
+  url: http://stackoverflow.com/users/965935/josh-c
+
+- title: Twitter
+  url: http://twitter.com/thejoshcrawford
+
+#- title: Theme Setup
+#  url: /theme-setup/
