--- a/_config.yml
+++ b/_config.yml
@@ -53,7 +53,8 @@ owner:
   youtube: 
   soundcloud: 
   weibo: 
-  flickr: 
+  flickr:
+  resumemonk: 9644-josh/resumes/7300
 
 include: [".htaccess"]
 exclude: ["lib", "config.rb", "Capfile", "config", "log", "Rakefile", "Rakefile.rb", "tmp", "less", "*.sublime-project", "*.sublime-workspace", "test", "spec", "Gruntfile.js", "package.json", "node_modules", "Gemfile", "Gemfile.lock", "LICENSE", "README.md"]
