--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,6 +3,9 @@
 - title: Email
   url: mailto:josh@crawford.cc
 
+- title: Resume
+  url: https://www.resumonk.com/users/9644-josh/resumes/7300
+
 - title: LinkedIn
   url: http://linkedin.com/in/thejoshcrawford
 
