fixed resume link

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,7 +4,7 @@
   url: mailto:josh@crawford.cc
 
 - title: Resume
-  url: https://www.resumonk.com/users/9644-josh/resumes/7300
+  url: https://www.resumonk.com/bimuro
 
 - title: LinkedIn
   url: http://linkedin.com/in/thejoshcrawford
