--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ owner:
   facebook:
   google:
     plus:
-    analytics: 
+    analytics: UA-24534074-1
     verify: 
     ad-client: 
     ad-slot: 
